dimagi-SalesforceFB/src/objects/Project_Report_Out__c.object
<CustomObject>
    <fields>
        <fullName>Ability_to_meet_Schedule__c</fullName>
        <label>Ability to meet Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ability_to_stay_within_Scope__c</fullName>
        <label>Ability to stay within Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cap_planning_GDoc__c</fullName>
        <label>Cap planning GDoc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Facing__c</fullName>
        <label>Client Facing Deadlines</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Snapshot</label>
        <referenceTo>PRO_Contract_Snapshot__c</referenceTo>
        <relationshipLabel>Project Report Outs</relationshipLabel>
        <relationshipName>Project_Report_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Project Report Outs</relationshipLabel>
        <relationshipName>Contract_Project_Report_Outs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_System_Usage__c</fullName>
        <label>Current System Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliverables_Completed__c</fullName>
        <formula>Contract__r.Percent_through_SOW_deliverables__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Execution_Efficiency__c</fullName>
        <formula>Contract__r.Execution_Efficiency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execution Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Issues_Questions_Notables__c</fullName>
        <label>Issues / Questions / Notables</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Accomplishments_Last_Two_Weeks__c</fullName>
        <label>Key Accomplishments (last two weeks)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Next_Steps_next_2_weeks__c</fullName>
        <label>Key Next Steps (next 2 weeks)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Report_ID__c</fullName>
        <label>Last Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_email__c</fullName>
        <label>Project Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Relationship__c</fullName>
        <label>Partner Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Dashboard__c</fullName>
        <label>Project Dashboard</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Out_Date__c</fullName>
        <inlineHelpText>The last day of the report out period.</inlineHelpText>
        <label>Report Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Developer_Work__c</fullName>
        <label>Internal Developer Deadlines</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_Planning__c</fullName>
        <label>Resource Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Has been updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has been reviewed and did not need updating.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <formula>CASE( Status__c , &apos;Green&apos;, 4, &apos;Yellow&apos;, 3, &apos;Red&apos;, 2, 1)</formula>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Report Out</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Status__c</columns>
        <columns>Key_Accomplishments_Last_Two_Weeks__c</columns>
        <columns>Key_Next_Steps_next_2_weeks__c</columns>
        <columns>Issues_Questions_Notables__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Report_Outs</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Status__c</columns>
        <columns>Report_Out_Date__c</columns>
        <columns>PM_email__c</columns>
        <columns>Key_Accomplishments_Last_Two_Weeks__c</columns>
        <columns>Issues_Questions_Notables__c</columns>
        <columns>Key_Next_Steps_next_2_weeks__c</columns>
        <columns>Client_Facing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Report Outs</label>
    </listViews>
    <nameField>
        <label>Project Report Out Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Report Outs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_be_2nd_or_4th_Thursday</fullName>
        <active>true</active>
        <errorConditionFormula>IF(CASE(MOD(  Report_Out_Date__c  - DATE(1900, 1, 6), 7), 5, &quot;Thursday&quot;,&quot;Error&quot;) = &quot;Thursday&quot;,
	if(DAY(Report_Out_Date__c) &lt; 8, 
		true,
		if(DAY(Report_Out_Date__c) &lt; 15,
			false,
			if(DAY(Report_Out_Date__c) &lt; 22, 
				true,
				if(DAY(Report_Out_Date__c) &lt; 29, 
					false, 
					true)
			)
		)
	),
	true)</errorConditionFormula>
        <errorDisplayField>Report_Out_Date__c</errorDisplayField>
        <errorMessage>Must be the second of fourth Thursday of a month.</errorMessage>
    </validationRules>
</CustomObject>